- initial commit
- PIP-45 Dodano moduły REST i gadget to szkieletu aplikacji.
- PIP-45 Dodano brakujące pliki lokalizacji.
- PIP-45 Poprawiono pliki lokalizacji.
- Fix pom.xml, teraz projekt się uruchamia
- PIP-46 Poprawiono pliki lokalizacji oraz gadget.xml
- PIP-46 Refactoring nazwy katalogu
- PIP-47 dodanie pierwszych elementów gui
- PIP-49 Dodano dwie metody zasobu rest oraz wyświetlanie rezultatu zapytania w GUI