@@ -7,3 +7,4 @@
 - PIP-46 Refactoring nazwy katalogu
 - PIP-47 dodanie pierwszych elementów gui
 - PIP-49 Dodano dwie metody zasobu rest oraz wyświetlanie rezultatu zapytania w GUI
+- PIP-49 Refactoring + naprawa błędu z dwoma listami wszystkich Issue.
